[metadata]
# 项目元数据
name = ghand
author = 深圳果力智能科技有限公司
author_email = csi@glitech.com
description = 枭尧灵巧手 Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YourGitHubOrg/GHand-SDK
license = MIT
license_files = LICENSE

[options]
# 打包选项
packages = find:
python_requires = >=3.10
install_requires =
    pysoem
    netifaces
    setuptools
    sphinx
    collision_sdk

[options.packages.find]
# 告诉 find: 在哪里查找包
where = src