[metadata]
# Project metadata
name = ghand
author = Shenzhen GLI Technology Co., Ltd.
author_email = csi@glitech.com
description = GHand Python SDK for dexterous hand
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gli-sdk/GHand-SDK
license = MIT
license_files = LICENSE

[options]
# Packaging options
packages = find:
python_requires = >=3.10
install_requires =
    pysoem>=0.2.0
    netifaces>=0.11.0
    numpy>=1.24.0
    collision_sdk>=0.1.0
    pymodbus>=3.0.0
    pyserial>=3.5

[options.packages.find]
# Tell find: where to look for packages
where = src
