[metadata]
# Project metadata
name = ghand
author = Shenzhen GLI Technology Co., Ltd.
author_email = csi@glitech.com
description = GHand Python SDK for dexterous hand
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gli-sdk/GHand-Python-SDK
license = MIT
license_files = LICENSE

[options]
# Packaging options
packages = find:
python_requires = >=3.10
install_requires =
    collision_sdk @ git+https://gitee.com/glitech/collision-collisions-detection.git
    pysoem>=0.2.0
    netifaces>=0.11.0
    numpy>=1.24.0

[options.packages.find]
# Tell find: where to look for packages
where = src
